[package]
name = "bahamut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
reqwest = { version = "0.11.15", features = ["json"] }
scraper = "0.15.0"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
ratatui = "0.20"
crossterm = "0.26.0"
tui-input = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
