[package]
name = "bahamut"
version = "0.3.0"
edition = "2021"
authors = ["CK Aznable"]
description = "gamer.com.tw api and tui client"
homepage = "https://github.com/ckaznable/bahamut-rs"
repository = "https://github.com/ckaznable/bahamut-rs"
keywords = ["tui", "api"]
exclude = [".github/"]
license = "MIT"
readme = "README.md"

[dependencies]
futures = "0.3.27"
reqwest = { version = "0.11.16", features = ["json"] }
scraper = "0.16.0"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
ratatui = "0.21.0"
crossterm = "0.26.1"
tui-input = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
openssl = { version = "0.10", features = ["vendored"] }
lazy_static = "1.4.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
